nav-bar created.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miranda</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <div id="main">
+        <div class="page1">
+            <div class="nav">
+                <h5>Bangalore, India</h5>
+                <img src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/5f7f87c8b81a6e7a214312f0_header.svg" alt="">
+                <i class="ri-menu-3-fill"></i>
+            </div>
+            
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
