--- a/index.html
+++ b/index.html
@@ -1,25 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miranda</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css" rel="stylesheet"/>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div id="main">
-        <div class="page1">
-            <div class="nav">
-                <h5>Bangalore, India</h5>
-                <img src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/5f7f87c8b81a6e7a214312f0_header.svg" alt="">
-                <i class="ri-menu-3-fill"></i>
-            </div>
-            
+      <div class="page1">
+        <div class="nav">
+          <h5>Bangalore, India</h5>
+          <img
+            src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/5f7f87c8b81a6e7a214312f0_header.svg"
+            alt=""
+          />
+          <i class="ri-menu-3-fill"></i>
         </div>
+        <div class="section">
+          <div class="sec-1">
+            <div class="image-div">
+              <img
+                src="https://cdn.prod.website-files.com/5f9085a4041dd5427c5ac8ae/615d9672cc65f12c9ab25f21_thumbnail-small.jpeg?"
+                alt=""
+              />
+            </div>
+            <h4>AVRO | KO <span>NEW</span></h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+              fuga, illum quia tempore eius temporibus accusantium molestiae
+              voluptatem maxime at.
+            </p>
+          </div>
+          <div class="sec-2">
+            <h2>ALL WORK!</h2>
+            <h3>
+              A Featured selection <br />
+              the latest work- <br />
+              of the last years.
+            </h3>
+            <h5><span>Tip!</span> Drag to sideways to navigate</h5>
+          </div>
+          <div class="sec-3">
+            <div class="image-div">
+              <img
+                src="https://cdn.prod.website-files.com/5f9085a4041dd5427c5ac8ae/647dc0777b1a5df29f8e5a58_thumbnail-small.webp?"
+                alt=""
+              />
+            </div>
+            <h4>WOW CONCEPT <span>NEW</span></h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+              fuga, illum quia tempore eius temporibus accusantium molestiae
+              voluptatem maxime at.
+            </p>
+          </div>
+        </div>
+        <h1>MIRANDA</h1>
+      </div>
     </div>
 
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
