modified, added locomotive.js.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miranda</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css"
@@ -14,7 +15,7 @@
     <div id="main">
       <div class="page1">
         <div class="nav">
-          <h5>Bangalore, India</h5>
+          <h5>Bangalore, IN</h5>
           <img
             src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/5f7f87c8b81a6e7a214312f0_header.svg"
             alt=""
@@ -62,11 +63,26 @@
         </div>
         <h1>MIRANDA</h1>
       </div>
+      <div class="page2">
+        <div class="page2-left">
+          <h2>Interactive <span>Artist!</span></h2>
+          <img src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/605c6ce3bc0c7d1cd4ca847e_avatar-star-p-800.jpeg" alt="">
+          <p>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias maxime magnam reiciendis ut excepturi ea ducimus, fuga fugit, facilis dolore qui, saepe quidem in ipsa animi velit tempore. Recusandae, cumque?</p>
+        </div>
+        <div class="page2-right">
+          <img src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/605c62f4c78c4ba46a1268be_avatar-1-p-2000.jpeg" alt="">
+          <h1>Digital Art Director Interactive Designer Creative Developer Based in Bangalore, IN</h1>
+        </div>
+      </div>
+      <div class="page3">
+        <h1>Website</h1>
+        <img src="https://cdn.prod.website-files.com/5f2429f172d117fcee10e819/60474834660f934090d42877_stamp.png" alt="">
+      </div>
     </div>
 
 
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
   </body>
